Ensure inputs' middle alignment

--- a/css/style.scss
+++ b/css/style.scss
@@ -109,6 +109,7 @@ $color-picker-border-radius: 3px;
 	z-index: 10;
 }
 input {
+	vertical-align: middle;
 	width: 100px;
 }
 h2, summary {
